fix: incorrect align

--- a/src/css/global.less
+++ b/src/css/global.less
@@ -20,4 +20,8 @@ h1, h2, h3, h4, h5, h6 {
     font-family: "Poppins", -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', "微软雅黑", "Microsoft Yahei UI", sans-serif;;
 }
 
+.mdi {
+    text-align: center;
+}
+
 @primary: #fcd307;
